src/lua_api/lua.h

#define lua_upvalueindex(i) (LUA_GLOBALSINDEX - (i))
typedef struct lua_State lua_State;
typedef int (*lua_CFunction)(lua_State *L);
/*
** functions that read/write blocks when loading/dumping Lua chunks
*/
typedef const char *(*lua_Reader)(lua_State *L, void *ud, size_t *sz);
typedef int (*lua_Writer)(lua_State *L, const void *p, size_t sz, void *ud);
/*
** prototype for memory-allocation functions
*/
typedef void *(*lua_Alloc)(void *ud, void *ptr, size_t osize, size_t nsize);
/* type of numbers in Lua */
typedef LUA_NUMBER lua_Number;
/* type for integer functions */
typedef LUA_INTEGER lua_Integer;
/*
** state manipulation
*/
LUA_API lua_State *(lua_newstate)(lua_Alloc f, void *ud);
LUA_API void(lua_close)(lua_State *L);
LUA_API lua_State *(lua_newthread)(lua_State * L);
LUA_API lua_CFunction(lua_atpanic)(lua_State *L, lua_CFunction panicf);
/*
** basic stack manipulation
*/
LUA_API int(lua_gettop)(lua_State *L);
LUA_API void(lua_settop)(lua_State *L, int idx);
LUA_API void(lua_pushvalue)(lua_State *L, int idx);
LUA_API void(lua_remove)(lua_State *L, int idx);
LUA_API void(lua_insert)(lua_State *L, int idx);
LUA_API void(lua_replace)(lua_State *L, int idx);
LUA_API int(lua_checkstack)(lua_State *L, int sz);
LUA_API void(lua_xmove)(lua_State *from, lua_State *to, int n);
/*
** access functions (stack -> C)
*/

LUA_API int(lua_isnumber)(lua_State *L, int idx);
LUA_API int(lua_isstring)(lua_State *L, int idx);
LUA_API int(lua_iscfunction)(lua_State *L, int idx);
LUA_API int(lua_isuserdata)(lua_State *L, int idx);
LUA_API int(lua_type)(lua_State *L, int idx);
LUA_API const char *(lua_typename)(lua_State * L, int tp);
LUA_API int(lua_equal)(lua_State *L, int idx1, int idx2);
LUA_API int(lua_rawequal)(lua_State *L, int idx1, int idx2);
LUA_API int(lua_lessthan)(lua_State *L, int idx1, int idx2);
LUA_API lua_Number(lua_tonumber)(lua_State *L, int idx);
LUA_API lua_Integer(lua_tointeger)(lua_State *L, int idx);
LUA_API int(lua_toboolean)(lua_State *L, int idx);
LUA_API const char *(lua_tolstring)(lua_State * L, int idx, size_t *len);
LUA_API size_t(lua_objlen)(lua_State *L, int idx);
LUA_API lua_CFunction(lua_tocfunction)(lua_State *L, int idx);
LUA_API void *(lua_touserdata)(lua_State * L, int idx);
LUA_API lua_State *(lua_tothread)(lua_State * L, int idx);
LUA_API const void *(lua_topointer)(lua_State * L, int idx);
/*
** push functions (C -> stack)
*/
LUA_API void(lua_pushnil)(lua_State *L);
LUA_API void(lua_pushnumber)(lua_State *L, lua_Number n);
LUA_API void(lua_pushinteger)(lua_State *L, lua_Integer n);
LUA_API void(lua_pushlstring)(lua_State *L, const char *s, size_t l);
LUA_API void(lua_pushstring)(lua_State *L, const char *s);
LUA_API const char *(lua_pushvfstring)(lua_State * L, const char *fmt,
                                       va_list argp);
LUA_API const char *(lua_pushfstring)(lua_State * L, const char *fmt, ...);
LUA_API void(lua_pushcclosure)(lua_State *L, lua_CFunction fn, int n);
LUA_API void(lua_pushboolean)(lua_State *L, int b);
LUA_API void(lua_pushlightuserdata)(lua_State *L, void *p);
LUA_API int(lua_pushthread)(lua_State *L);
/*
** get functions (Lua -> stack)
*/
LUA_API void(lua_gettable)(lua_State *L, int idx);
LUA_API void(lua_getfield)(lua_State *L, int idx, const char *k);
LUA_API void(lua_rawget)(lua_State *L, int idx);
LUA_API void(lua_rawgeti)(lua_State *L, int idx, int n);
LUA_API void(lua_createtable)(lua_State *L, int narr, int nrec);
LUA_API void *(lua_newuserdata)(lua_State * L, size_t sz);
LUA_API int(lua_getmetatable)(lua_State *L, int objindex);
LUA_API void(lua_getfenv)(lua_State *L, int idx);
/*
** set functions (stack -> Lua)
*/
LUA_API void(lua_settable)(lua_State *L, int idx);
LUA_API void(lua_setfield)(lua_State *L, int idx, const char *k);
LUA_API void(lua_rawset)(lua_State *L, int idx);
LUA_API void(lua_rawseti)(lua_State *L, int idx, int n);
LUA_API int(lua_setmetatable)(lua_State *L, int objindex);
LUA_API int(lua_setfenv)(lua_State *L, int idx);
/*
** `load' and `call' functions (load and run Lua code)
*/
LUA_API void(lua_call)(lua_State *L, int nargs, int nresults);
LUA_API int(lua_pcall)(lua_State *L, int nargs, int nresults, int errfunc);
LUA_API int(lua_cpcall)(lua_State *L, lua_CFunction func, void *ud);
LUA_API int(lua_load)(lua_State *L, lua_Reader reader, void *dt,
                      const char *chunkname);
LUA_API int(lua_dump)(lua_State *L, lua_Writer writer, void *data);
/*
** coroutine functions
*/
LUA_API int(lua_yield)(lua_State *L, int nresults);
LUA_API int(lua_resume)(lua_State *L, int narg);
LUA_API int(lua_status)(lua_State *L);
LUA_API int(lua_gc)(lua_State *L, int what, int data);
/*
** miscellaneous functions
*/

LUA_API int(lua_error)(lua_State *L);
LUA_API int(lua_next)(lua_State *L, int idx);
LUA_API void(lua_concat)(lua_State *L, int n);
LUA_API lua_Alloc(lua_getallocf)(lua_State *L, void **ud);
LUA_API void lua_setallocf(lua_State *L, lua_Alloc f, void *ud);
#define lua_newtable(L) lua_createtable(L, 0, 0)
#define lua_register(L, n, f) (lua_pushcfunction(L, (f)), lua_setglobal(L, (n)))
#define lua_pushcfunction(L, f) lua_pushcclosure(L, (f), 0)
#define lua_strlen(L, i) lua_objlen(L, (i))
#define lua_islightuserdata(L, n) (lua_type(L, (n)) == LUA_TLIGHTUSERDATA)
#define lua_pushliteral(L, s)                                                  \
  lua_pushlstring(L, "" s, (sizeof(s) / sizeof(char)) - 1)
#define lua_setglobal(L, s) lua_setfield(L, LUA_GLOBALSINDEX, (s))
#define lua_getglobal(L, s) lua_getfield(L, LUA_GLOBALSINDEX, (s))
#define lua_getregistry(L) lua_pushvalue(L, LUA_REGISTRYINDEX)
#define lua_getgccount(L) lua_gc(L, LUA_GCCOUNT, 0)
/* hack */
LUA_API void lua_setlevel(lua_State *from, lua_State *to);
typedef struct lua_Debug lua_Debug; /* activation record */
/* Functions to be called by the debuger in specific events */
typedef void (*lua_Hook)(lua_State *L, lua_Debug *ar);
LUA_API int lua_getstack(lua_State *L, int level, lua_Debug *ar);
LUA_API int lua_getinfo(lua_State *L, const char *what, lua_Debug *ar);
LUA_API const char *lua_getlocal(lua_State *L, const lua_Debug *ar, int n);
LUA_API const char *lua_setlocal(lua_State *L, const lua_Debug *ar, int n);
LUA_API const char *lua_getupvalue(lua_State *L, int funcindex, int n);
LUA_API const char *lua_setupvalue(lua_State *L, int funcindex, int n);
LUA_API int lua_sethook(lua_State *L, lua_Hook func, int mask, int count);
LUA_API lua_Hook lua_gethook(lua_State *L);
LUA_API int lua_gethookmask(lua_State *L);
LUA_API int lua_gethookcount(lua_State *L);
/* From Lua 5.2. */
LUA_API void *lua_upvalueid(lua_State *L, int idx, int n);
LUA_API void lua_upvaluejoin(lua_State *L, int idx1, int n1, int idx2, int n2);
LUA_API int lua_loadx(lua_State *L, lua_Reader reader, void *dt,
                      const char *chunkname, const char *mode);
LUA_API const lua_Number *lua_version(lua_State *L);
LUA_API void lua_copy(lua_State *L, int fromidx, int toidx);
LUA_API lua_Number lua_tonumberx(lua_State *L, int idx, int *isnum);
LUA_API lua_Integer lua_tointegerx(lua_State *L, int idx, int *isnum);
/* From Lua 5.3. */
LUA_API int lua_isyieldable(lua_State *L);
struct lua_Debug {
  int event;
  const char *name;           /* (n) */
  const char *namewhat;       /* (n) `global', `local', `field', `method' */
  const char *what;           /* (S) `Lua', `C', `main', `tail' */
  const char *source;         /* (S) */
  int currentline;            /* (l) */
  int nups;                   /* (u) number of upvalues */
  int linedefined;            /* (S) */
  int lastlinedefined;        /* (S) */
  char short_src[LUA_IDSIZE]; /* (S) */
  /* private part */
  int i_ci; /* active function */
};